Assignment2_Zhao_Duo/tests/bad/ScientificNotationLittleMinusWithBadCharacters.calc
a .0%e-23 b 1.%e-25 c 2.3%e-31 d 34.5%e-45 e 6.78%e-73 f 99.99%e-56 g 3%e-93 h 76%e-45
.0%e-23
1.%e-25
2.3%e-31
34.5%e-45
6.78%e-73
99.99%e-56
3%e-93
76%e-45
a .0%e-2 b 1.%e-2 c 2.3%e-3 d 34.5%e-4 e 6.78%e-7 f 99.99%e-5 g 3%e-9 h 76%e-4
.0%e-2
1.%e-2
2.3%e-3
34.5%e-4
6.78%e-7
99.99%e-5
3%e-9
76%e-4
a .0e%-23 b 1.e%-25 c 2.3e%-31 d 34.5e%-45 e 6.78e%-73 f 99.99e%-56 g 3e%-93 h 76e%-45
.0e%-23
1.e%-25
2.3e%-31
34.5e%-45
6.78e%-73
99.99e%-56
3e%-93
76e%-45
a .0e%-2 b 1.e%-2 c 2.3e%-3 d 34.5e%-4 e 6.78e%-7 f 99.99e%-5 g 3e%-9 h 76e%-4
.0e%-2
1.e%-2
2.3e%-3
34.5e%-4
6.78e%-7
99.99e%-5
3e%-9
76e%-4
a .0e-%23 b 1.e-%25 c 2.3e-%31 d 34.5e-%45 e 6.78e-%73 f 99.99e-%56 g 3e-%93 h 76e-%45
.0e-%23
1.e-%25
2.3e-%31
34.5e-%45
6.78e-%73
99.99e-%56
3e-%93
76e-%45
a .0e-%2 b 1.e-%2 c 2.3e-%3 d 34.5e-%4 e 6.78e-%7 f 99.99e-%5 g 3e-%9 h 76e-%4
.0e-%2
1.e-%2
2.3e-%3
34.5e-%4
6.78e-%7
99.99e-%5
3e-%9
76e-%4
a .0e-2%3 b 1.e-2%5 c 2.3e-3%1 d 34.5e-4%5 e 6.78e-7%3 f 99.99e-5%6 g 3e-9%3 h 76e-4%5
.0e-2%3
1.e-2%5
2.3e-3%1
34.5e-4%5
6.78e-7%3
99.99e-5%6
3e-9%3
76e-4%5
a .0e-2% b 1.e-2% c 2.3e-3% d 34.5e-4% e 6.78e-7% f 99.99e-5% g 3e-9% h 76e-4%
.0e-2%
1.e-2%
2.3e-3%
34.5e-4%
6.78e-7%
99.99e-5%
3e-9%
76e-4%
a .0e-23% b 1.e-25% c 2.3e-31% d 34.5e-45% e 6.78e-73% f 99.99e-56% g 3e-93% h 76e-45%
.0e-23%
1.e-25%
2.3e-31%
34.5e-45%
6.78e-73%
99.99e-56%
3e-93%
76e-45%
